// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots basics|Tooltip/ListItem active icon 1`] = `
.emotion-2 {
  display: block;
}

.emotion-1 {
  fill: currentColor;
}

.emotion-4 {
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 .Left,
.emotion-4 .Title,
.emotion-4 .Center,
.emotion-4 .Right {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-4 .Title,
.emotion-4 .Center {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 .Left,
.emotion-4 .Right {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.emotion-4 .Right {
  text-align: right;
  margin-left: 20px;
}

.emotion-5 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-5:not(:first-child) {
  border-top: 1px solid #EEEEEE;
}

.emotion-5 .Title {
  color: #444444;
}

.emotion-5 .Right svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-5 .Right svg path {
  fill: inherit;
}

.emotion-5:hover {
  background: #e3f3ff;
  cursor: pointer;
}

.emotion-5:hover .Right svg {
  opacity: 1;
}

.emotion-5 .Title,
.emotion-5 .Center {
  color: #FF4785;
}

.emotion-5 .Right svg,
.emotion-5 .Left svg {
  opacity: 1;
}

.emotion-5 .Right svg path,
.emotion-5 .Left svg path {
  fill: #FF4785;
}

<a
  class="emotion-5"
>
  <span
    class="emotion-4"
    role="presentation"
  >
    <span
      class="Title emotion-0"
    >
      active icon
    </span>
    <span
      class="Right emotion-3"
    >
      <svg
        class="emotion-2"
        height="20px"
        viewBox="0 0 1024 1024"
        width="20px"
      >
        <path
          class="emotion-1"
          d="M1008.714 490.522c-9.002-12.594-223.276-308.808-496.684-308.808-273.444 0-487.682 296.214-496.684 308.808l-15.316 21.49 15.316 21.466c9.002 12.618 223.24 308.808 496.684 308.808 273.408 0 487.682-296.19 496.684-308.808l15.316-21.466-15.316-21.49zM807.68 631.688c-46 39.142-92.558 70.064-138.382 91.904-53.874 25.676-106.786 38.694-157.266 38.694-50.49 0-103.406-13.018-157.282-38.696-45.826-21.838-92.382-52.758-138.378-91.902-53.708-45.706-94.302-92.122-116.61-119.672 22.36-27.602 63.028-74.094 116.612-119.696 45.996-39.146 92.554-70.068 138.378-91.908 53.876-25.678 106.792-38.698 157.28-38.698 50.48 0 103.39 13.020 157.264 38.696 45.824 21.842 92.382 52.764 138.382 91.91 53.602 45.614 94.264 92.098 116.624 119.696-22.306 27.544-62.898 73.954-116.622 119.672zM692.032 512.036c0 99.41-80.588 180-180 180s-180-80.59-180-180c0-99.406 80.588-179.998 180-179.998s180 80.59 180 179.998z"
        />
      </svg>
    </span>
  </span>
</a>
`;

exports[`Storyshots basics|Tooltip/ListItem all 1`] = `
@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

.emotion-8 {
  display: block;
}

.emotion-7 {
  fill: currentColor;
}

.emotion-5 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-5:not(:first-child) {
  border-top: 1px solid #EEEEEE;
}

.emotion-5 .Title {
  color: #444444;
}

.emotion-5 .Right svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-5 .Right svg path {
  fill: inherit;
}

.emotion-5:hover {
  background: #e3f3ff;
  cursor: pointer;
}

.emotion-5:hover .Right svg {
  opacity: 1;
}

.emotion-1 {
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 .Left,
.emotion-1 .Title,
.emotion-1 .Center,
.emotion-1 .Right {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 .Title,
.emotion-1 .Center {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 .Left,
.emotion-1 .Right {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.emotion-1 .Right {
  text-align: right;
  margin-left: 20px;
}

.emotion-2 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-2:not(:first-child) {
  border-top: 1px solid #EEEEEE;
}

.emotion-2 .Title {
  color: #444444;
}

.emotion-2 .Right svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-2 .Right svg path {
  fill: inherit;
}

.emotion-2:hover {
  background: #e3f3ff;
  cursor: pointer;
}

.emotion-2:hover .Right svg {
  opacity: 1;
}

.emotion-2 .Title {
  -webkit-animation: animation-0 1.5s ease-in-out infinite;
  animation: animation-0 1.5s ease-in-out infinite;
  background: rgba(0,0,0,.05);
  color: transparent;
  cursor: progress;
  -webkit-flex: none !important;
  -ms-flex: none !important;
  flex: none !important;
  display: inline-block;
}

.emotion-23 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-23:not(:first-child) {
  border-top: 1px solid #EEEEEE;
}

.emotion-23 .Title {
  color: #444444;
}

.emotion-23 .Right svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-23 .Right svg path {
  fill: inherit;
}

.emotion-23:hover {
  background: #e3f3ff;
  cursor: pointer;
}

.emotion-23:hover .Right svg {
  opacity: 1;
}

.emotion-23 .Title,
.emotion-23 .Center {
  color: #FF4785;
}

.emotion-23 .Right svg,
.emotion-23 .Left svg {
  opacity: 1;
}

.emotion-23 .Right svg path,
.emotion-23 .Left svg path {
  fill: #FF4785;
}

.emotion-37 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  cursor: not-allowed !important;
}

.emotion-37:not(:first-child) {
  border-top: 1px solid #EEEEEE;
}

.emotion-37 .Title {
  color: #444444;
}

.emotion-37 .Right svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-37 .Right svg path {
  fill: inherit;
}

.emotion-37:hover {
  background: #e3f3ff;
  cursor: pointer;
}

.emotion-37:hover .Right svg {
  opacity: 1;
}

.emotion-37 .Title,
.emotion-37 .Center {
  color: #999999;
}

<div>
  <a
    class="emotion-2"
  >
    <span
      class="emotion-1"
      role="presentation"
    >
      <span
        class="Title emotion-0"
      >
        <span>
          Loading state
        </span>
      </span>
    </span>
  </a>
  <a
    class="emotion-5"
  >
    <span
      class="emotion-1"
      role="presentation"
    >
      <span
        class="Title emotion-0"
      >
        Default
      </span>
    </span>
  </a>
  <a
    class="emotion-5"
  >
    <span
      class="emotion-1"
      role="presentation"
    >
      <span
        class="Title emotion-0"
      >
        Default icon
      </span>
      <span
        class="Right emotion-9"
      >
        <svg
          class="emotion-8"
          height="20px"
          viewBox="0 0 1024 1024"
          width="20px"
        >
          <path
            class="emotion-7"
            d="M1008.714 490.522c-9.002-12.594-223.276-308.808-496.684-308.808-273.444 0-487.682 296.214-496.684 308.808l-15.316 21.49 15.316 21.466c9.002 12.618 223.24 308.808 496.684 308.808 273.408 0 487.682-296.19 496.684-308.808l15.316-21.466-15.316-21.49zM807.68 631.688c-46 39.142-92.558 70.064-138.382 91.904-53.874 25.676-106.786 38.694-157.266 38.694-50.49 0-103.406-13.018-157.282-38.696-45.826-21.838-92.382-52.758-138.378-91.902-53.708-45.706-94.302-92.122-116.61-119.672 22.36-27.602 63.028-74.094 116.612-119.696 45.996-39.146 92.554-70.068 138.378-91.908 53.876-25.678 106.792-38.698 157.28-38.698 50.48 0 103.39 13.020 157.264 38.696 45.824 21.842 92.382 52.764 138.382 91.91 53.602 45.614 94.264 92.098 116.624 119.696-22.306 27.544-62.898 73.954-116.622 119.672zM692.032 512.036c0 99.41-80.588 180-180 180s-180-80.59-180-180c0-99.406 80.588-179.998 180-179.998s180 80.59 180 179.998z"
          />
        </svg>
      </span>
    </span>
  </a>
  <a
    class="emotion-5"
  >
    <span
      class="emotion-1"
      role="presentation"
    >
      <span
        class="Left emotion-9"
      >
        left
      </span>
      <span
        class="Title emotion-0"
      >
        title
      </span>
      <span
        class="Center emotion-9"
      >
        center
      </span>
      <span
        class="Right emotion-9"
      >
        right
      </span>
    </span>
  </a>
  <a
    class="emotion-23"
  >
    <span
      class="emotion-1"
      role="presentation"
    >
      <span
        class="Left emotion-9"
      >
        left
      </span>
      <span
        class="Title emotion-0"
      >
        active
      </span>
      <span
        class="Center emotion-9"
      >
        center
      </span>
      <span
        class="Right emotion-9"
      >
        right
      </span>
    </span>
  </a>
  <a
    class="emotion-23"
  >
    <span
      class="emotion-1"
      role="presentation"
    >
      <span
        class="Left emotion-9"
      >
        left
      </span>
      <span
        class="Title emotion-0"
      >
        active icon
      </span>
      <span
        class="Center emotion-9"
      >
        center
      </span>
      <span
        class="Right emotion-9"
      >
        <svg
          class="emotion-8"
          height="20px"
          viewBox="0 0 1024 1024"
          width="20px"
        >
          <path
            class="emotion-7"
            d="M1008.714 490.522c-9.002-12.594-223.276-308.808-496.684-308.808-273.444 0-487.682 296.214-496.684 308.808l-15.316 21.49 15.316 21.466c9.002 12.618 223.24 308.808 496.684 308.808 273.408 0 487.682-296.19 496.684-308.808l15.316-21.466-15.316-21.49zM807.68 631.688c-46 39.142-92.558 70.064-138.382 91.904-53.874 25.676-106.786 38.694-157.266 38.694-50.49 0-103.406-13.018-157.282-38.696-45.826-21.838-92.382-52.758-138.378-91.902-53.708-45.706-94.302-92.122-116.61-119.672 22.36-27.602 63.028-74.094 116.612-119.696 45.996-39.146 92.554-70.068 138.378-91.908 53.876-25.678 106.792-38.698 157.28-38.698 50.48 0 103.39 13.020 157.264 38.696 45.824 21.842 92.382 52.764 138.382 91.91 53.602 45.614 94.264 92.098 116.624 119.696-22.306 27.544-62.898 73.954-116.622 119.672zM692.032 512.036c0 99.41-80.588 180-180 180s-180-80.59-180-180c0-99.406 80.588-179.998 180-179.998s180 80.59 180 179.998z"
          />
        </svg>
      </span>
    </span>
  </a>
  <a
    class="emotion-37"
    disabled=""
  >
    <span
      class="emotion-1"
      role="presentation"
    >
      <span
        class="Left emotion-9"
      >
        left
      </span>
      <span
        class="Title emotion-0"
      >
        disabled
      </span>
      <span
        class="Center emotion-9"
      >
        center
      </span>
      <span
        class="Right emotion-9"
      >
        right
      </span>
    </span>
  </a>
</div>
`;

exports[`Storyshots basics|Tooltip/ListItem default 1`] = `
.emotion-2 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-2:not(:first-child) {
  border-top: 1px solid #EEEEEE;
}

.emotion-2 .Title {
  color: #444444;
}

.emotion-2 .Right svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-2 .Right svg path {
  fill: inherit;
}

.emotion-2:hover {
  background: #e3f3ff;
  cursor: pointer;
}

.emotion-2:hover .Right svg {
  opacity: 1;
}

.emotion-1 {
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 .Left,
.emotion-1 .Title,
.emotion-1 .Center,
.emotion-1 .Right {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 .Title,
.emotion-1 .Center {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 .Left,
.emotion-1 .Right {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.emotion-1 .Right {
  text-align: right;
  margin-left: 20px;
}

<a
  class="emotion-2"
>
  <span
    class="emotion-1"
    role="presentation"
  >
    <span
      class="Title emotion-0"
    >
      Default
    </span>
  </span>
</a>
`;

exports[`Storyshots basics|Tooltip/ListItem default icon 1`] = `
.emotion-2 {
  display: block;
}

.emotion-1 {
  fill: currentColor;
}

.emotion-5 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-5:not(:first-child) {
  border-top: 1px solid #EEEEEE;
}

.emotion-5 .Title {
  color: #444444;
}

.emotion-5 .Right svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-5 .Right svg path {
  fill: inherit;
}

.emotion-5:hover {
  background: #e3f3ff;
  cursor: pointer;
}

.emotion-5:hover .Right svg {
  opacity: 1;
}

.emotion-4 {
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 .Left,
.emotion-4 .Title,
.emotion-4 .Center,
.emotion-4 .Right {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-4 .Title,
.emotion-4 .Center {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 .Left,
.emotion-4 .Right {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.emotion-4 .Right {
  text-align: right;
  margin-left: 20px;
}

<a
  class="emotion-5"
>
  <span
    class="emotion-4"
    role="presentation"
  >
    <span
      class="Title emotion-0"
    >
      Default icon
    </span>
    <span
      class="Right emotion-3"
    >
      <svg
        class="emotion-2"
        height="20px"
        viewBox="0 0 1024 1024"
        width="20px"
      >
        <path
          class="emotion-1"
          d="M1008.714 490.522c-9.002-12.594-223.276-308.808-496.684-308.808-273.444 0-487.682 296.214-496.684 308.808l-15.316 21.49 15.316 21.466c9.002 12.618 223.24 308.808 496.684 308.808 273.408 0 487.682-296.19 496.684-308.808l15.316-21.466-15.316-21.49zM807.68 631.688c-46 39.142-92.558 70.064-138.382 91.904-53.874 25.676-106.786 38.694-157.266 38.694-50.49 0-103.406-13.018-157.282-38.696-45.826-21.838-92.382-52.758-138.378-91.902-53.708-45.706-94.302-92.122-116.61-119.672 22.36-27.602 63.028-74.094 116.612-119.696 45.996-39.146 92.554-70.068 138.378-91.908 53.876-25.678 106.792-38.698 157.28-38.698 50.48 0 103.39 13.020 157.264 38.696 45.824 21.842 92.382 52.764 138.382 91.91 53.602 45.614 94.264 92.098 116.624 119.696-22.306 27.544-62.898 73.954-116.622 119.672zM692.032 512.036c0 99.41-80.588 180-180 180s-180-80.59-180-180c0-99.406 80.588-179.998 180-179.998s180 80.59 180 179.998z"
        />
      </svg>
    </span>
  </span>
</a>
`;

exports[`Storyshots basics|Tooltip/ListItem disabled 1`] = `
.emotion-4 {
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 .Left,
.emotion-4 .Title,
.emotion-4 .Center,
.emotion-4 .Right {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-4 .Title,
.emotion-4 .Center {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 .Left,
.emotion-4 .Right {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.emotion-4 .Right {
  text-align: right;
  margin-left: 20px;
}

.emotion-5 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
  cursor: not-allowed !important;
}

.emotion-5:not(:first-child) {
  border-top: 1px solid #EEEEEE;
}

.emotion-5 .Title {
  color: #444444;
}

.emotion-5 .Right svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-5 .Right svg path {
  fill: inherit;
}

.emotion-5:hover {
  background: #e3f3ff;
  cursor: pointer;
}

.emotion-5:hover .Right svg {
  opacity: 1;
}

.emotion-5 .Title,
.emotion-5 .Center {
  color: #999999;
}

<a
  class="emotion-5"
  disabled=""
>
  <span
    class="emotion-4"
    role="presentation"
  >
    <span
      class="Left emotion-0"
    >
      left
    </span>
    <span
      class="Title emotion-1"
    >
      disabled
    </span>
    <span
      class="Center emotion-0"
    >
      center
    </span>
    <span
      class="Right emotion-0"
    >
      right
    </span>
  </span>
</a>
`;

exports[`Storyshots basics|Tooltip/ListItem loading 1`] = `
@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

@keyframes animation-0 {
  0%, 100% {
    opacity: 1;
  }

  50% {
    opacity: .4;
  }
}

.emotion-1 {
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 .Left,
.emotion-1 .Title,
.emotion-1 .Center,
.emotion-1 .Right {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 .Title,
.emotion-1 .Center {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 .Left,
.emotion-1 .Right {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.emotion-1 .Right {
  text-align: right;
  margin-left: 20px;
}

.emotion-2 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-2:not(:first-child) {
  border-top: 1px solid #EEEEEE;
}

.emotion-2 .Title {
  color: #444444;
}

.emotion-2 .Right svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-2 .Right svg path {
  fill: inherit;
}

.emotion-2:hover {
  background: #e3f3ff;
  cursor: pointer;
}

.emotion-2:hover .Right svg {
  opacity: 1;
}

.emotion-2 .Title {
  -webkit-animation: animation-0 1.5s ease-in-out infinite;
  animation: animation-0 1.5s ease-in-out infinite;
  background: rgba(0,0,0,.05);
  color: transparent;
  cursor: progress;
  -webkit-flex: none !important;
  -ms-flex: none !important;
  flex: none !important;
  display: inline-block;
}

<a
  class="emotion-2"
>
  <span
    class="emotion-1"
    role="presentation"
  >
    <span
      class="Title emotion-0"
    >
      <span>
        Loading state
      </span>
    </span>
  </span>
</a>
`;

exports[`Storyshots basics|Tooltip/ListItem w/positions 1`] = `
.emotion-5 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-5:not(:first-child) {
  border-top: 1px solid #EEEEEE;
}

.emotion-5 .Title {
  color: #444444;
}

.emotion-5 .Right svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-5 .Right svg path {
  fill: inherit;
}

.emotion-5:hover {
  background: #e3f3ff;
  cursor: pointer;
}

.emotion-5:hover .Right svg {
  opacity: 1;
}

.emotion-4 {
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 .Left,
.emotion-4 .Title,
.emotion-4 .Center,
.emotion-4 .Right {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-4 .Title,
.emotion-4 .Center {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 .Left,
.emotion-4 .Right {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.emotion-4 .Right {
  text-align: right;
  margin-left: 20px;
}

<a
  class="emotion-5"
>
  <span
    class="emotion-4"
    role="presentation"
  >
    <span
      class="Left emotion-0"
    >
      left
    </span>
    <span
      class="Title emotion-1"
    >
      title
    </span>
    <span
      class="Center emotion-0"
    >
      center
    </span>
    <span
      class="Right emotion-0"
    >
      right
    </span>
  </span>
</a>
`;

exports[`Storyshots basics|Tooltip/ListItem w/positions active 1`] = `
.emotion-4 {
  line-height: 18px;
  padding: 7px 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 .Left,
.emotion-4 .Title,
.emotion-4 .Center,
.emotion-4 .Right {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-4 .Title,
.emotion-4 .Center {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 .Left,
.emotion-4 .Right {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.emotion-4 .Right {
  text-align: right;
  margin-left: 20px;
}

.emotion-5 {
  font-size: 12px;
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-5:not(:first-child) {
  border-top: 1px solid #EEEEEE;
}

.emotion-5 .Title {
  color: #444444;
}

.emotion-5 .Right svg {
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  opacity: 0;
  height: 12px;
  width: 12px;
  margin: 3px 0;
  vertical-align: top;
}

.emotion-5 .Right svg path {
  fill: inherit;
}

.emotion-5:hover {
  background: #e3f3ff;
  cursor: pointer;
}

.emotion-5:hover .Right svg {
  opacity: 1;
}

.emotion-5 .Title,
.emotion-5 .Center {
  color: #FF4785;
}

.emotion-5 .Right svg,
.emotion-5 .Left svg {
  opacity: 1;
}

.emotion-5 .Right svg path,
.emotion-5 .Left svg path {
  fill: #FF4785;
}

<a
  class="emotion-5"
>
  <span
    class="emotion-4"
    role="presentation"
  >
    <span
      class="Left emotion-0"
    >
      left
    </span>
    <span
      class="Title emotion-1"
    >
      active
    </span>
    <span
      class="Center emotion-0"
    >
      center
    </span>
    <span
      class="Right emotion-0"
    >
      right
    </span>
  </span>
</a>
`;
